<resources>
    <string name="app_name">Covid19Tracker</string>
    <string name="world">World Statistics</string>
    <string name="appointment">Book an Appointment</string>
    <string name="infoboard">Info Board</string>
    <string name="error">Error</string>
    <string name="active">Active</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="total">Total</string>
    <string name="refresh">Refresh</string>
    <string name="last_updated_on">Last updated on:</string>


</resources>
