<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="---- News ----"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/webview2"
        android:layout_width="373dp"
        android:layout_height="180dp"
        android:layout_above="@+id/refreshButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="123dp" />

    <TextView
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/active"
        android:textColor="#FFFF00"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/active"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:text="@string/error"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/active"
        android:text="@string/deaths"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deathsNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deaths"
        android:layout_alignStart="@+id/deaths"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:text="@string/error"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/total"
        android:text="@string/recovered"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recoveredNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recovered"
        android:layout_alignStart="@+id/recovered"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/error"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:text="@string/total"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total"
        android:layout_alignStart="@+id/total"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/error"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recoveredNum"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/refresh" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/last_updated_on"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dateRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/error"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</RelativeLayout>